--- a/UsersApiExample/appsettings.json
+++ b/UsersApiExample/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "DummyApi": {
+    "BaseUrl": "https://dummyapi.io/data/v1/user",
+    "ApiKey": "62860ee9e027313e6afab175"
+  },
+
   "AllowedHosts": "*"
 }
